@@ -186,7 +186,7 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 	}
 
 	/* Get the stash for this user. */
-	stash = _pam_krb5_stash_get(pamh, userinfo, options);
+	stash = _pam_krb5_stash_get(pamh, user, userinfo, options);
 	if (stash == NULL) {
 		warn("error retrieving stash for '%s' (shouldn't happen)",
 		     user);
@@ -486,7 +486,7 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 	if (retval == PAM_SUCCESS) {
 		if (options->use_shmem) {
 			_pam_krb5_stash_shm_write(pamh, stash, options,
-						  userinfo);
+						  user, userinfo);
 		}
 		notice("authentication succeeds for '%s' (%s)", user,
 		       userinfo->unparsed_name);
